# RemoveEasy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  manager.py  models.py
apps/accounts/managers/: __init__.py  account_manager.py
apps/accounts/migrations/: 0001_initial.py  0002_create_user.py  0003_alter_account_options.py
apps/common/models/: timestamp.py
apps/common/repositories/: __init__.py  entity_repository.py  entity_repository_base.py
apps/inventory/: admin.py  apps.py  controllers.py  models.py  schemas.py  translation.py
apps/inventory/migrations/: 0001_initial.py  0002_create_inventory_section.py  0003_create_inventory_item.py  0004_alter_inventoryitem_icon_class_and_more.py  0005_inventorysection_title_bg_inventorysection_title_en.py  0006_inventoryitem_title_bg_inventoryitem_title_en.py
apps/orders/: admin.py  apps.py  controllers.py  manager.py  models.py  query_set.py  schemas.py  urls.py
apps/orders/migrations/: 0001_initial.py  (+4 more)
apps/services/: admin.py  controllers.py  models.py  schemas.py  translation.py
apps/settings/: admin.py  apps.py  models.py
client/: Architecute.md  README.md  components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
removeeasy/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: collect_static.sh  entrypoint.sh  initialize.sh  run_tests.sh  setup_logs.sh  setup_static.sh
templates/email/: create_order_bg.html  create_order_en.html
(+256 files in other folders)
