[project]
name = "removeeasy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-markdownx>=4.0.9",
    "django-modeltranslation>=0.19.16",
    "django-ninja>=1.4.3",
    "django-ninja-extra>=0.30.1",
    "mysql-connector-python>=9.4.0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["removeeasy", "apps"]
